tests/ui/auto-traits/issue-23080-2.current.stderr
error[E0380]: auto traits cannot have associated items
  --> $DIR/issue-23080-2.rs:9:10
   |
LL | unsafe auto trait Trait {
   |                   ----- auto traits cannot have associated items
LL |     type Output;
   |          ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0380`.
